--- a/html/about.html
+++ b/html/about.html
@@ -20,7 +20,7 @@
     <body>
         <header>
             <h1 class="site-heading text-faded d-none d-lg-block">
-                &ensp; <span class="site-heading-lower mainheader">McKinley Murphy</span>
+                &ensp; <span class="site-heading-lower mainheader" id = "backtotop">McKinley Murphy</span>
             </h1>
         </header>
         <!-- Navigation-->
